Password Generator page core (with out UI)

--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -35,6 +35,16 @@
                 Clicked="OnCounterClicked"
                 HorizontalOptions="Center" />
 
+            <!--CREATE A BUTTON-->
+            <Button 
+                Text="Press me!" 
+                Clicked="OnButtonClicked" />
+            
+            <!--DISPLAY TEXT-->
+            <Label 
+                x:Name="myLabel" 
+                Text="" />
+
         </VerticalStackLayout>
     </ScrollView>
 
