--- a/GeneratePasswordPage.xaml
+++ b/GeneratePasswordPage.xaml
@@ -4,12 +4,20 @@
              x:Class="PasswordManager.GeneratePasswordPage"
              Title="GeneratePasswordPage">
     <VerticalStackLayout>
-        <StackLayout>
+        <AbsoluteLayout Margin="0,0,0,50">
+            <Image 
+               Source="pg.png" 
+               AbsoluteLayout.LayoutBounds="0.5, 0, 100, 100"
+               AbsoluteLayout.LayoutFlags="PositionProportional" />
+        </AbsoluteLayout>
+
             <!--SLIDER-->
-            <Label Text="Password Length:" />
-            <Slider x:Name="lengthSlider" Minimum="6" Maximum="20" Value="12" />
+            <Label Text="Taille du mot de passe"  TextTransform="Uppercase" FontAttributes="Bold" />
+            <Slider x:Name="lengthSlider" Minimum="6" Maximum="20" Value="12"/>
             <!--String format allow us to delete the decimal values-->
-            <Label Text="{Binding Value, Source={x:Reference lengthSlider},StringFormat='{0:F0}'}" />
+            <Label Text="{Binding Value, Source={x:Reference lengthSlider},StringFormat='{0:F0}'}" FontAttributes="Bold" />
+    
+
             <!--PASSWORD OPTIONS-->
             <StackLayout Orientation="Horizontal">
                 <Label Text="Uppercase Letters" VerticalOptions="Center" />
@@ -32,8 +40,6 @@
             <Label x:Name="passwordLabel" Text="" FontSize="Large" FontAttributes="Bold" />
             <!--COPY TO CLIPBOARD-->
             <Button x:Name="copyToClipboardButton" Text="Copy to Clipboard" Clicked="OnCopyToClipboardClicked" IsVisible="False" />
-
-
-        </StackLayout>
+ 
     </VerticalStackLayout>
 </ContentPage>
