--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -4,11 +4,26 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:views="clr-namespace:PasswordManager.Views"
+    xmlns:local="clr-namespace:PasswordManager"
     Shell.FlyoutBehavior="Disabled">
 
-    <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate views:PasswordListPage}"
-        Route="MainPage" />
+
+
+
+    <TabBar>
+        <ShellContent
+            Title="MENU"
+            ContentTemplate="{DataTemplate local:MainPage}"
+            Route="MainPage" />
+
+        <ShellContent
+            Title="MANAGER  "
+            ContentTemplate="{DataTemplate views:PasswordListPage}"
+            Route="PasswordListPage" />
+
+        <ShellContent
+            Title="GENERATOR"
+            ContentTemplate="{DataTemplate local:GeneratePasswordPage}" />
+    </TabBar>
 
 </Shell>
