--- a/Views/PasswordListPage.xaml
+++ b/Views/PasswordListPage.xaml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:models="clr-namespace:PasswordManager.Models"
@@ -7,27 +6,50 @@
              x:Class="PasswordManager.Views.PasswordListPage"
              Title="Password List">
     <StackLayout>
-        <Label Text="Password List" FontSize="28"></Label>
-        <Button Text="Add Password" Command="{Binding AddUpdatePasswordCommand}"  HorizontalOptions="EndAndExpand"></Button>
+        <Grid Margin="10, 10, 10, 0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <Label Text="YOUR PASSWORDS" FontSize="28" Margin="10, 0, 0, 0" TextColor="#427AA1"/>
 
-        <CollectionView ItemsSource="{Binding Passwords}">
-            <CollectionView.ItemTemplate>
-                <DataTemplate x:DataType="models:PasswordModel">
-                    <Frame Margin="10" Padding="10">
-                        <StackLayout >
-                            <Label Text="{Binding Title}"/>
-                            <HorizontalStackLayout Spacing="15">
-                                <Label Text="{Binding Username}" FontSize="18" FontAttributes="Bold"/>
-                                <Label Text="{Binding Password}" FontSize="18" FontAttributes="Bold"/>
-                            </HorizontalStackLayout>
-                        </StackLayout>
-                        <Frame.GestureRecognizers>
-                            <TapGestureRecognizer Command="{Binding Source={x:RelativeSource AncestorType={x:Type viewModels:PasswordListPageViewModel}},Path=DisplayActionCommand}" CommandParameter="{Binding .}"></TapGestureRecognizer>
-                        </Frame.GestureRecognizers>
-                    </Frame>
-
-                </DataTemplate>
-            </CollectionView.ItemTemplate>
-        </CollectionView>
+            <Button Text="NEW PASSWORD" Command="{Binding AddUpdatePasswordCommand}" Grid.Column="1"  Margin="0, 0, 10, 0" TextColor="#ffffff" BackgroundColor="#427AA1"/>
+        </Grid>
+        <BoxView HeightRequest="1" Color="Gray" VerticalOptions="End" Grid.ColumnSpan="2" Margin="0, 10, 0, 0"/>
+        <ScrollView VerticalOptions="FillAndExpand" >
+            <CollectionView ItemsSource="{Binding Passwords}" >
+                <CollectionView.ItemTemplate >
+                    <DataTemplate x:DataType="models:PasswordModel" >
+                        <Grid Margin="10" Padding="10"   ColumnSpacing="0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="Auto" />
+                            </Grid.ColumnDefinitions>
+                            <Frame Margin="10" Padding="10" HasShadow="True" CornerRadius="5">
+                                <StackLayout Grid.Column="0">
+                                    <Label Text="{Binding Title}" FontSize="18" FontAttributes="Bold" TextColor="#427AA1"/>
+                                    <VerticalStackLayout Spacing="5" >
+                                        <HorizontalStackLayout Spacing="5" >
+                                            <Label Text="ID :" FontSize="14" FontAttributes="Bold" />
+                                            <Label Text="{Binding Username}" FontSize="14" FontAttributes="Bold" />
+                                        </HorizontalStackLayout>
+                                        <HorizontalStackLayout Spacing="5" >
+                                            <Label Text="PASSWORD :" FontSize="14" FontAttributes="Bold"  />
+                                            <Label x:Name="PasswordLabel" Text="{Binding Password}" FontSize="14" FontAttributes="Bold"  />
+                                        </HorizontalStackLayout>
+                                    </VerticalStackLayout>
+                                </StackLayout>
+                                <Frame.GestureRecognizers>
+                                    <TapGestureRecognizer Command="{Binding Source={x:RelativeSource AncestorType={x:Type viewModels:PasswordListPageViewModel}},Path=DisplayActionCommand}" CommandParameter="{Binding .}" />
+                                </Frame.GestureRecognizers>
+                            </Frame>
+                            <Button Grid.Column="1" Text="SHOW / HIDE" FontSize="10" Padding="10" HeightRequest="30" BackgroundColor="#427AA1" TextColor="White"  />
+                        </Grid>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+        </ScrollView>
     </StackLayout>
 </ContentPage>
+
+
