New UI for password generator

--- a/GeneratePasswordPage.xaml
+++ b/GeneratePasswordPage.xaml
@@ -3,43 +3,41 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PasswordManager.GeneratePasswordPage"
              Title="GeneratePasswordPage">
-    <VerticalStackLayout>
-        <AbsoluteLayout Margin="0,0,0,50">
-            <Image 
-               Source="pg.png" 
-               AbsoluteLayout.LayoutBounds="0.5, 0, 100, 100"
-               AbsoluteLayout.LayoutFlags="PositionProportional" />
-        </AbsoluteLayout>
+    <ScrollView VerticalOptions="FillAndExpand" >
+        <StackLayout Margin="20">
+            <Image Source="pg.png" HeightRequest="100" HorizontalOptions="CenterAndExpand" />
+            <Label Text="Password Length" FontAttributes="Bold" TextColor="#FFFFFF" />
+            <Slider x:Name="lengthSlider" Minimum="6" Maximum="20" Value="12" ThumbColor="#FFFFFF" MinimumTrackColor="#427AA1" />
+            <Label Text="{Binding Value, Source={x:Reference lengthSlider},StringFormat='{0:F0}'}" FontAttributes="Bold" HorizontalOptions="Center" TextColor="#427AA1" FontSize="21"/>
+            <HorizontalStackLayout  HorizontalOptions="CenterAndExpand" Margin="10,20,10,20">
+                <StackLayout Orientation="Vertical" HorizontalOptions="Center">
+                    <Label Text="Uppercase Letters" VerticalOptions="Center" />
+                    <Switch x:Name="uppercaseSwitch" IsToggled="True" />
+                </StackLayout>
+                <StackLayout Orientation="Vertical" HorizontalOptions="Center">
+                    <Label Text="Lowercase Letters" VerticalOptions="Center" />
+                    <Switch x:Name="lowercaseSwitch" IsToggled="True" />
+                </StackLayout>
+                <StackLayout Orientation="Vertical" HorizontalOptions="Center">
+                    <Label Text="Numbers" VerticalOptions="Center" />
+                    <Switch x:Name="numericSwitch" IsToggled="True" />
+                </StackLayout>
+                <StackLayout Orientation="Vertical" HorizontalOptions="Center">
+                    <Label Text="Special Characters" VerticalOptions="Center" />
+                    <Switch x:Name="specialSwitch" IsToggled="True" />
+                </StackLayout>
+            </HorizontalStackLayout>
 
-            <!--SLIDER-->
-            <Label Text="Taille du mot de passe"  TextTransform="Uppercase" FontAttributes="Bold" />
-            <Slider x:Name="lengthSlider" Minimum="6" Maximum="20" Value="12"/>
-            <!--String format allow us to delete the decimal values-->
-            <Label Text="{Binding Value, Source={x:Reference lengthSlider},StringFormat='{0:F0}'}" FontAttributes="Bold" />
-    
+            <Button Text="Generate Password" Clicked="OnGeneratePasswordClicked" WidthRequest="550" BackgroundColor="#427AA1" TextColor="White"  />
+            <StackLayout Orientation="Vertical" x:Name="generatedPasswordContainer" Margin="10,10,10,20">
+                <Label x:Name="passwordLabel" HorizontalOptions="Center" Text="" FontSize="Large" FontAttributes="Bold" Margin="10,0,0,10"/>
+                <Button x:Name="copyToClipboardButton" Text="Copy to Clipboard" Clicked="OnCopyToClipboardClicked" IsVisible="False" WidthRequest="160" BackgroundColor="#427AA1" TextColor="White"  />
 
-            <!--PASSWORD OPTIONS-->
-            <StackLayout Orientation="Horizontal">
-                <Label Text="Uppercase Letters" VerticalOptions="Center" />
-                <Switch x:Name="uppercaseSwitch" IsToggled="True" />
             </StackLayout>
-            <StackLayout Orientation="Horizontal">
-                <Label Text="Lowercase Letters" VerticalOptions="Center" />
-                <Switch x:Name="lowercaseSwitch" IsToggled="True" />
-            </StackLayout>
-            <StackLayout Orientation="Horizontal">
-                <Label Text="Numbers" VerticalOptions="Center" />
-                <Switch x:Name="numericSwitch" IsToggled="True" />
-            </StackLayout>
-            <StackLayout Orientation="Horizontal">
-                <Label Text="Special Characters" VerticalOptions="Center" />
-                <Switch x:Name="specialSwitch" IsToggled="True" />
-            </StackLayout>
-            <!--GENERATED PASSWORD-->
-            <Button Text="Generate Password" Clicked="OnGeneratePasswordClicked" />
-            <Label x:Name="passwordLabel" Text="" FontSize="Large" FontAttributes="Bold" />
-            <!--COPY TO CLIPBOARD-->
-            <Button x:Name="copyToClipboardButton" Text="Copy to Clipboard" Clicked="OnCopyToClipboardClicked" IsVisible="False" />
- 
-    </VerticalStackLayout>
+        </StackLayout>
+    </ScrollView>
 </ContentPage>
+
+
+
+
