System Icon tray + installer

--- a/Views/AddUpdatePasswordDetail.xaml
+++ b/Views/AddUpdatePasswordDetail.xaml
@@ -1,37 +1,33 @@
-<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PasswordManager.Views.AddUpdatePasswordDetail"
-             Title="Add / Update Password Details">
+             Title="">
     <ContentPage.Resources>
         <ResourceDictionary>
             <Style TargetType="Label">
-                <Setter Property="FontSize" Value="14"></Setter>
-                <Setter Property="TextColor" Value="SlateGray"></Setter>
+                <Setter Property="FontSize" Value="14"/>
+                <Setter Property="FontAttributes" Value="Bold"/>
+                <Setter Property="TextColor" Value="#427AA1"/>
+            </Style>
+            <Style TargetType="Entry">
+                <Setter Property="FontSize" Value="14"/>
+                <Setter Property="TextColor" Value="#FFF"/>
+            </Style>
+            <Style TargetType="Button">
+                <Setter Property="FontSize" Value="14"/>
+                <Setter Property="BackgroundColor" Value="#427AA1"/>
+                <Setter Property="TextColor" Value="White"/>
             </Style>
         </ResourceDictionary>
     </ContentPage.Resources>
-    <StackLayout Margin="10" Spacing="15">
-        <VerticalStackLayout>
-            <Label Text="App Title"></Label>
-            <Entry Text="{Binding PasswordDetail.Title}"  Placeholder="App Title..."></Entry>
-            <BoxView HeightRequest="0.8" Color="Gray"></BoxView>
-        </VerticalStackLayout>
-
-        <VerticalStackLayout>
-            <Label Text="Username" ></Label>
-            <Entry Text="{Binding PasswordDetail.Username}"  Placeholder="Your username..."></Entry>
-            <BoxView HeightRequest="0.8" Color="Gray"></BoxView>
-        </VerticalStackLayout>
-
-        <VerticalStackLayout>
-            <Label Text="Password" ></Label>
-            <Entry Text="{Binding PasswordDetail.Password }"  Placeholder="Your password..."></Entry>
-            <BoxView HeightRequest="0.8" Color="Gray"></BoxView>
-        </VerticalStackLayout>
-
-
-
-        <Button Text="Save" Command="{Binding AddUpdatePasswordCommand}"></Button>
+    <StackLayout Margin="20" Spacing="10">
+        <Label Text="App Title"/>
+        <Entry Text="{Binding PasswordDetail.Title}" Placeholder="Enter app title..."/>
+        <Label Text="Username"/>
+        <Entry Text="{Binding PasswordDetail.Username}" Placeholder="Enter username..."/>
+        <Label Text="Password"/>
+        <Entry Text="{Binding PasswordDetail.Password}" Placeholder="Enter password..." IsPassword="True"/>
+        <Button Text="Save" Command="{Binding AddUpdatePasswordCommand}"/>
     </StackLayout>
 </ContentPage>
