--- a/Views/PasswordListPage.xaml
+++ b/Views/PasswordListPage.xaml
@@ -4,7 +4,7 @@
              xmlns:viewModels="clr-namespace:PasswordManager.ViewModels"
              x:DataType="viewModels:PasswordListPageViewModel"
              x:Class="PasswordManager.Views.PasswordListPage"
-             Title="Password List">
+             Title="">
     <StackLayout>
         <Grid Margin="10, 10, 10, 0">
             <Grid.ColumnDefinitions>
