--- a/GeneratePasswordPage.xaml
+++ b/GeneratePasswordPage.xaml
@@ -3,41 +3,45 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PasswordManager.GeneratePasswordPage"
              Title="">
-    <ScrollView VerticalOptions="FillAndExpand" >
-        <StackLayout Margin="20">
+        <ScrollView>
+    <Grid VerticalOptions="FillAndExpand">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <StackLayout Grid.Row="0">
             <Image Source="pg.png" HeightRequest="100" HorizontalOptions="CenterAndExpand" />
             <Label Text="Password Length" FontAttributes="Bold" TextColor="#FFFFFF" />
             <Slider x:Name="lengthSlider" Minimum="6" Maximum="20" Value="12" ThumbColor="#FFFFFF" MinimumTrackColor="#427AA1" />
             <Label Text="{Binding Value, Source={x:Reference lengthSlider},StringFormat='{0:F0}'}" FontAttributes="Bold" HorizontalOptions="Center" TextColor="#427AA1" FontSize="21"/>
-            <HorizontalStackLayout  HorizontalOptions="CenterAndExpand" Margin="10,20,10,20">
-                <StackLayout Orientation="Vertical" HorizontalOptions="Center">
+        </StackLayout>
+
+        <StackLayout Grid.Row="1">
+            <StackLayout HorizontalOptions="FillAndExpand" Margin="10,20,10,20">
+                <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand">
                     <Label Text="Uppercase Letters" VerticalOptions="Center" />
                     <Switch x:Name="uppercaseSwitch" IsToggled="True" />
                 </StackLayout>
-                <StackLayout Orientation="Vertical" HorizontalOptions="Center">
+                <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand">
                     <Label Text="Lowercase Letters" VerticalOptions="Center" />
                     <Switch x:Name="lowercaseSwitch" IsToggled="True" />
                 </StackLayout>
-                <StackLayout Orientation="Vertical" HorizontalOptions="Center">
+                <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand">
                     <Label Text="Numbers" VerticalOptions="Center" />
                     <Switch x:Name="numericSwitch" IsToggled="True" />
                 </StackLayout>
-                <StackLayout Orientation="Vertical" HorizontalOptions="Center">
+                <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand">
                     <Label Text="Special Characters" VerticalOptions="Center" />
                     <Switch x:Name="specialSwitch" IsToggled="True" />
                 </StackLayout>
-            </HorizontalStackLayout>
+            </StackLayout>
 
-            <Button Text="Generate Password" Clicked="OnGeneratePasswordClicked" WidthRequest="550" BackgroundColor="#427AA1" TextColor="White"  />
+            <Button Text="Generate Password" Clicked="OnGeneratePasswordClicked" WidthRequest="160" BackgroundColor="#427AA1" TextColor="White"  />
             <StackLayout Orientation="Vertical" x:Name="generatedPasswordContainer" Margin="10,10,10,20">
                 <Label x:Name="passwordLabel" HorizontalOptions="Center" Text="" FontSize="Large" FontAttributes="Bold" Margin="10,0,0,10"/>
                 <Button x:Name="copyToClipboardButton" Text="Copy to Clipboard" Clicked="OnCopyToClipboardClicked" IsVisible="False" WidthRequest="160" BackgroundColor="#427AA1" TextColor="White"  />
-
             </StackLayout>
         </StackLayout>
+    </Grid>
     </ScrollView>
 </ContentPage>
-
-
-
-
