Show/Hide Password Implementation + Welcome page.

--- a/Views/PasswordListPage.xaml
+++ b/Views/PasswordListPage.xaml
@@ -2,9 +2,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:models="clr-namespace:PasswordManager.Models"
              xmlns:viewModels="clr-namespace:PasswordManager.ViewModels"
+             xmlns:converters="clr-namespace:PasswordManager.Converters"
              x:DataType="viewModels:PasswordListPageViewModel"
              x:Class="PasswordManager.Views.PasswordListPage"
              Title="">
+    <ContentPage.Resources>
+        <converters:PasswordVisibilityConverter x:Key="PasswordVisibilityConverter" />
+    </ContentPage.Resources>
     <StackLayout>
         <Grid Margin="10, 10, 10, 0">
             <Grid.ColumnDefinitions>
@@ -35,7 +39,7 @@
                                         </HorizontalStackLayout>
                                         <HorizontalStackLayout Spacing="5" >
                                             <Label Text="PASSWORD :" FontSize="14" FontAttributes="Bold"  />
-                                            <Label x:Name="PasswordLabel" Text="{Binding Password}" FontSize="14" FontAttributes="Bold"  />
+                                            <Label x:Name="PasswordLabel" Text="{Binding Password, Converter={StaticResource PasswordVisibilityConverter}, ConverterParameter={Binding IsPasswordVisible}}" FontSize="14" FontAttributes="Bold"/>
                                         </HorizontalStackLayout>
                                     </VerticalStackLayout>
                                 </StackLayout>
@@ -43,7 +47,8 @@
                                     <TapGestureRecognizer Command="{Binding Source={x:RelativeSource AncestorType={x:Type viewModels:PasswordListPageViewModel}},Path=DisplayActionCommand}" CommandParameter="{Binding .}" />
                                 </Frame.GestureRecognizers>
                             </Frame>
-                            <Button Grid.Column="1" Text="SHOW / HIDE" FontSize="10" Padding="10" HeightRequest="30" BackgroundColor="#427AA1" TextColor="White"  />
+                            <Button Grid.Column="1" Text="SHOW / HIDE" FontSize="10" Padding="10" HeightRequest="30" BackgroundColor="#427AA1" TextColor="White" Clicked="OnShowHidePasswordClicked"/>
+
                         </Grid>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
@@ -51,5 +56,3 @@
         </ScrollView>
     </StackLayout>
 </ContentPage>
-
-
