--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -3,43 +3,30 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PasswordManager.MainPage">
 
-    <ScrollView>
-        <VerticalStackLayout
-            Spacing="25"
-            Padding="30,0"
-            VerticalOptions="Center">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
 
-            <Image
-                Source="dotnet_bot.png"
-                SemanticProperties.Description="Cute dot net bot waving hi to you!"
-                HeightRequest="200"
-                HorizontalOptions="Center" />
+        <StackLayout Grid.Row="0" BackgroundColor="#427AA1" Padding="10">
+            <Label Text="PASSWORD MANAGER" TextColor="White" FontSize="28" HorizontalOptions="Center" FontAttributes="Bold" />
+        </StackLayout>
 
-            <Label
-                Text="Hello, World!"
-                SemanticProperties.HeadingLevel="Level1"
-                FontSize="32"
-                HorizontalOptions="Center" />
+        <ScrollView Grid.Row="1">
+            <VerticalStackLayout Spacing="25" Padding="30,0" VerticalOptions="Center">
 
-            <Label
-                Text="Welcome to .NET Multi-platform App UI"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I"
-                FontSize="18"
-                HorizontalOptions="Center" />
+                <Image Source="dotnet_bot.png" SemanticProperties.Description="Cute dot net bot waving hi to you!" HeightRequest="200" HorizontalOptions="Center" />
 
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me"
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Center" />
+                <Label Text="Welcome to your password manager!" SemanticProperties.HeadingLevel="Level1" FontSize="32" HorizontalOptions="Center" />
 
+                <Label Text="Safely store and manage all of your passwords in one place." FontSize="18" HorizontalOptions="Center" />
 
-            <Label x:Name="PasswordLabel" Text="MyPassword" IsVisible="True" />
-            <Button Text="Show/Hide" Clicked="OnShowHideClicked" />
+                <Button Text="Get Started" FontSize="18" BackgroundColor="#427AA1" TextColor="White" Command="{Binding StartAppCommand}" HorizontalOptions="Center" />
 
-        </VerticalStackLayout>
-    </ScrollView>
+            </VerticalStackLayout>
+        </ScrollView>
+
+    </Grid>
 
 </ContentPage>
