--- a/Views/AddUpdatePasswordDetail.xaml
+++ b/Views/AddUpdatePasswordDetail.xaml
@@ -23,11 +23,11 @@
     </ContentPage.Resources>
     <StackLayout Margin="20" Spacing="10">
         <Label Text="App Title"/>
-        <Entry Text="{Binding PasswordDetail.Title}" Placeholder="Enter app title..."/>
+        <Entry Text="{Binding PasswordDetail.Title}" Placeholder="Enter app title..." TextColor="#7ba2bd"/>
         <Label Text="Username"/>
-        <Entry Text="{Binding PasswordDetail.Username}" Placeholder="Enter username..."/>
+        <Entry Text="{Binding PasswordDetail.Username}" Placeholder="Enter username..." TextColor="#7ba2bd"/>
         <Label Text="Password"/>
-        <Entry Text="{Binding PasswordDetail.Password}" Placeholder="Enter password..." IsPassword="True"/>
+        <Entry Text="{Binding PasswordDetail.Password}" Placeholder="Enter password..." IsPassword="True" TextColor="#7ba2bd"/>
         <Button Text="Save" Command="{Binding AddUpdatePasswordCommand}"/>
     </StackLayout>
 </ContentPage>
